Just tried gitHub

--- a/Python Basic Programs- MUF.ipynb
+++ b/Python Basic Programs- MUF.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Current Date and Time:\n",
+      "2023-29-06/04/23 11:29:56\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "now = datetime.datetime.now()\n",
@@ -27,6 +38,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of Circle is : 78.0\n"
+     ]
+    }
+   ],
    "source": [
     "PI = 3.12\n",
     "r = int(input(\"Enter the Radius of Circle\"))\n",
@@ -46,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perimeter of Rectangle = 10\n",
+      "Area of Reactangle= 12\n"
+     ]
+    }
+   ],
    "source": [
     "l = int(input(\"Enter the Length of the Rectangle\"))\n",
     "b = int(input(\"Enter the Breadth of the Rectangle\"))\n",
@@ -67,6 +97,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,6 +121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,6 +150,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,6 +172,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,6 +203,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,6 +226,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,6 +248,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,6 +274,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -257,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,6 +331,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,6 +353,45 @@
     "    print(\"\\n\")\n",
     "print(\"Thank You \",Name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello User\n",
+      "Enter a valid Operator\n",
+      "The % symbol gives the result for 10 and 20 is None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello User\")\n",
+    "\n",
+    "def calculator(operator,num1,num2):\n",
+    "    if operator == \"+\": \n",
+    "        print(num1+num2)\n",
+    "    elif operator == \"-\":\n",
+    "        print(num1-num2)\n",
+    "    else:\n",
+    "        print(\"Enter a valid Operator\")\n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "ops = \"%\"\n",
+    "print(f'The {ops} symbol gives the result for {a} and {b} is {calculator(ops,a,b)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -330,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
